# TinyML-KWS-Project

./: .gitignore  README.md  pyproject.toml
mcu/: platformio.ini
mcu/include/: microphone.hpp  model_data.h
mcu/src/: main.cpp  microphone.cpp  model_data.cpp
ml_mcu_project/convert/: convert_model.py  mfcc_test_labels.npy  model_data.cc  model_data.h
ml_mcu_project/model/: models.py  train.py  utils.py
