[tool.poetry]
name = "ml-mcu-project"
version = "0.1.0"
description = "ML to MCU pipeline"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow-model-optimization = "^0.8.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pytest = "^8.4.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
