[tool.poetry]
name = "ml-mcu-project"
version = "0.1.0"
description = "ML to MCU pipeline"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.11.0"
matplotlib = "^3.10.3"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
tensorflow = "^2.19.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pytest = "^8.4.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
